Fix odd svg spacing issues.
Don't use Lato in those places.

--- a/static_src/css/components/buttons.css
+++ b/static_src/css/components/buttons.css
@@ -31,6 +31,7 @@ button.link {
 }
 
 .svg {
+  font-family: var(--pico-font-family-sans-serif);
   font-size: 0;
   padding: 0.75rem;
   background-color: var(--pico-primary);
